@@ -1,6 +1,12 @@
 $Header$
 ===============================================================
 
+146	Luke Howard <lukeh@padl.com>
+
+	* patch from Simon Wilkinson <sxw@sxw.org.uk>
+	  for compatibility with old initgroups entry
+	  point
+
 145	Luke Howard <lukeh@padl.com>
 
 	* preliminary support for authPassword attribute
